--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <section class="user-input-section">
       <h1>idea<span class="">box</span></h1>
-      <input class="title-user-input" type="input" placeholder="Title">
-      <input class="body-user-input" type="input" placeholder="Body">
+      <input class="input" type="input" placeholder="Title">
+      <input class="body-user-input input" type="input" placeholder="Body">
       <button class="save-btn" type="button" name="button">save</button>
     </section>
     <section class="idea-list-section">
-      <input class="search-input" type="input" placeholder="Search">
+      <input class="search-input input" type="input" placeholder="Search">
       <article class="idea">
         <h2>Example idea</h2>
         <input class="delete-btn" type="submit" value="" src="icons/delete.svg">
