Add object constructor Fn, add delete btn functionatlity, create new idea object on save btn

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <section class="user-input-section">
       <h1>idea<span class="">box</span></h1>
-      <input class="input" type="input" placeholder="Title">
+      <input class="title-user-input input" type="input" placeholder="Title">
       <input class="body-user-input input" type="input" placeholder="Body">
       <button class="save-btn" type="button" name="button">save</button>
     </section>
     <section class="idea-list-section">
-      <input class="search-input" type="input" placeholder="Search">
+      <input class="search-input input" type="input" placeholder="Search">
       <section class="idea-storage-list">
       </section>
    </section>
