--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="user-input-section">
-      <h1>idea<span class="">box</span></h1>
+      <h1 class="logo">idea<span class="logo-span">box</span></h1>
       <input class="title-user-input input" type="input" placeholder="Title">
       <input class="body-user-input input" type="input" placeholder="Body">
       <button class="save-btn" type="button" name="button">save</button>
